fixed width on mobile

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body, html{
+  margin:0;
+  padding:0;
+}
+
 #overlayText {
   position:absolute;
    top:30%;
